TP_5/obj/tp_5.output
Estado 1 conflictos: 34 desplazamiento/reducción, 1 reducción/reducción
Estado 28 conflictos: 5 desplazamiento(s)/reducción(ones)
Estado 55 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 109 conflictos: 6 desplazamiento(s)/reducción(ones)
Estado 110 conflictos: 32 desplazamiento/reducción, 1 reducción/reducción
Estado 111 conflictos: 5 desplazamiento(s)/reducción(ones)
Estado 184 conflictos: 32 desplazamiento/reducción, 1 reducción/reducción
Estado 187 conflictos: 32 desplazamiento/reducción, 1 reducción/reducción
Estado 193 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 265 conflictos: 1 reducción(ones)/reducción(ones)
Estado 276 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 314 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: /* vacío */
    4     | declaracion ';'
    5     | sentencia
    6     | error finDeLinea

    7 finDeLinea: ';'
    8           | '\n'
    9           | '}'
   10           | '{'
   11           | '('
   12           | ')'
   13           | '['
   14           | ']'

   15 const: NUM_ENTERO
   16      | NUM_REAL
   17      | CHAR
   18      | const_enum

   19 const_enum: ID

   20 expresion: exp_asignacion
   21          | expresion ',' exp_asignacion

   22 exp_asignacion: exp_condicional
   23               | exp_unaria op_asignacion exp_asignacion

   24 exp_condicional: exp_OR_log
   25                | exp_OR_log '?' expresion ':' exp_condicional

   26 op_asignacion: '='
   27              | ASIG_MULT
   28              | ASIG_DIV
   29              | ASIG_MOD
   30              | ASIG_SUMA
   31              | ASIG_RESTA
   32              | ASIG_DESP_IZQ
   33              | ASIG_DESP_DER
   34              | ASIG_AND_BIN
   35              | ASIG_XOR_BIN
   36              | ASIG_OR_BIN

   37 exp_OR_log: exp_AND_log
   38           | exp_OR_log OP_OR exp_AND_log

   39 exp_AND_log: exp_OR_in
   40            | exp_AND_log OP_AND exp_OR_in

   41 exp_OR_in: exp_OR_ex
   42          | exp_OR_in '|' exp_OR_ex

   43 exp_OR_ex: exp_AND
   44          | exp_OR_ex '^' exp_AND

   45 exp_AND: exp_igualdad
   46        | exp_AND '&' exp_igualdad

   47 exp_igualdad: exp_relacional
   48             | exp_igualdad OP_IGUALDAD exp_relacional
   49             | exp_igualdad OP_DESIGUALDAD exp_relacional

   50 exp_relacional: exp_desp
   51               | exp_relacional '<' exp_desp
   52               | exp_relacional '>' exp_desp
   53               | exp_relacional OP_MENOR_IGUAL exp_desp
   54               | exp_relacional OP_MAYOR_IGUAL exp_desp

   55 exp_desp: exp_aditiva
   56         | exp_desp OP_DESP_IZQ exp_aditiva
   57         | exp_desp OP_DESP_DER exp_aditiva

   58 exp_aditiva: exp_multip
   59            | exp_aditiva '+' exp_multip
   60            | exp_aditiva '-' exp_multip

   61 exp_multip: exp_conversion
   62           | exp_multip '*' exp_conversion
   63           | exp_multip '/' exp_conversion
   64           | exp_multip '%' exp_conversion

   65 exp_conversion: exp_unaria
   66               | '(' nombre_tipo ')' exp_conversion exp_unaria

   67 exp_unaria: exp_sufijo
   68           | OP_INC exp_unaria
   69           | OP_DEC exp_unaria
   70           | op_unario exp_conversion
   71           | SIZEOF exp_unaria
   72           | SIZEOF '(' nombre_tipo ')'

   73 op_unario: '&'
   74          | '*'
   75          | '+'
   76          | '-'
   77          | '~'
   78          | '!'

   79 exp_sufijo: exp_primaria
   80           | exp_sufijo '[' expresion ']'
   81           | exp_sufijo '(' lista_argumentos ')'
   82           | exp_sufijo '.' ID
   83           | exp_sufijo OP_MIEMBRO_PUNT ID
   84           | exp_sufijo OP_INC
   85           | exp_sufijo OP_DEC

   86 lista_argumentos: exp_asignacion
   87                 | lista_argumentos ',' exp_asignacion

   88 exp_primaria: const
   89             | STRING
   90             | '(' expresion ')'

   91 declaracion: especificadores_declaracion lista_declaradores

   92 especificadores_declaracion: CLASE_ALM especificadores_declaracion_opc
   93                            | especificador_tipo especificadores_declaracion_opc
   94                            | CALIF_TIPO especificadores_declaracion_opc

   95 especificadores_declaracion_opc: /* vacío */
   96                                | especificadores_declaracion

   97 lista_declaradores: declarador
   98                   | declarador ',' lista_declaradores

   99 declarador: decla
  100           | decla '=' inicializador

  101 inicializador: exp_asignacion
  102              | '{' lista_inicializadores coma_opc '}'

  103 coma_opc: /* vacío */
  104         | ','

  105 lista_inicializadores: inicializador
  106                      | lista_inicializadores ',' inicializador

  107 especificador_tipo: TIPO_DATO
  108                   | especificador_struct_union
  109                   | especificador_enum

  110 especificador_struct_union: STRUCT_UNION ID_opc '{' lista_declaradores_struct '}'
  111                           | STRUCT_UNION ID

  112 ID_opc: /* vacío */
  113       | ID

  114 lista_declaradores_struct: declaracion_struct
  115                          | lista_declaradores_struct declaracion_struct

  116 declaracion_struct: lista_calificadores declaradores_struct ';'

  117 lista_calificadores: especificador_tipo lista_calificadores_opc
  118                    | CALIF_TIPO lista_calificadores_opc

  119 lista_calificadores_opc: /* vacío */
  120                        | lista_calificadores

  121 declaradores_struct: decla_struct
  122                    | declaradores_struct ',' decla_struct

  123 decla_struct: decla
  124             | decla_opc ':' exp_constante

  125 decla_opc: /* vacío */
  126          | decla

  127 exp_constante: exp_condicional

  128 exp_constante_opc: /* vacío */
  129                  | exp_constante

  130 decla: puntero_opc declarador_directo

  131 puntero_opc: /* vacío */
  132            | puntero

  133 puntero: '*' lista_calificadores_tipos_opc
  134        | '*' lista_calificadores_tipos_opc puntero

  135 lista_calificadores_tipos_opc: /* vacío */
  136                              | lista_calificadores_tipos

  137 lista_calificadores_tipos: CALIF_TIPO
  138                          | lista_calificadores_tipos CALIF_TIPO

  139 declarador_directo: ID
  140                   | '(' decla ')'
  141                   | declarador_directo '[' exp_constante_opc ']'
  142                   | declarador_directo '(' lista_tipos_param_opc ')'
  143                   | declarador_directo '(' lista_identificadores_opc ')'

  144 lista_identificadores_opc: /* vacío */
  145                          | lista_identificadores

  146 lista_tipos_param: lista_parametros

  147 lista_parametros: declaracion_parametro
  148                 | lista_parametros ',' declaracion_parametro

  149 declaracion_parametro: especificadores_declaracion decla
  150                      | especificadores_declaracion declarador_abstracto_opc

  151 declarador_abstracto_opc: /* vacío */
  152                         | declarador_abstracto

  153 lista_identificadores: ID
  154                      | lista_identificadores ',' ID

  155 especificador_enum: ENUM ID_opc '{' lista_enumeradores '}'
  156                   | ENUM ID

  157 lista_enumeradores: enumerador
  158                   | lista_enumeradores ',' enumerador

  159 enumerador: const_de_enumeracion
  160           | const_de_enumeracion '=' exp_constante

  161 const_de_enumeracion: ID

  162 nombre_tipo: lista_calificadores declarador_abstracto_opc

  163 declarador_abstracto: puntero
  164                     | puntero_opc declarador_abstracto_directo

  165 declarador_abstracto_directo: '(' declarador_abstracto ')'
  166                             | declarador_abstracto_directo_opc '[' exp_constante_opc ']'
  167                             | declarador_abstracto_directo_opc '(' lista_tipos_param_opc ')'

  168 declarador_abstracto_directo_opc: /* vacío */
  169                                 | declarador_abstracto_directo

  170 lista_tipos_param_opc: /* vacío */
  171                      | lista_tipos_param

  172 sentencia: sentencia_exp
  173          | sentencia_compuesta
  174          | sentencia_seleccion
  175          | sentencia_iteracion
  176          | sentencia_etiquetada
  177          | sentencia_salto
  178          | especificadores_declaracion decla sentencia_compuesta

  179 sentencia_exp: expresion_opc ';'

  180 expresion_opc: /* vacío */
  181              | expresion

  182 sentencia_compuesta: '{' lista_compuesta '}'

  183 lista_compuesta: lista_declaraciones_opc lista_sentencias_opc
  184                | lista_compuesta lista_declaraciones_opc lista_sentencias_opc

  185 lista_declaraciones_opc: /* vacío */
  186                        | lista_declaraciones

  187 lista_sentencias_opc: /* vacío */
  188                     | lista_sentencias

  189 lista_declaraciones: declaracion ';'
  190                    | lista_declaraciones declaracion ';'

  191 lista_sentencias: sentencia
  192                 | lista_sentencias sentencia

  193 sentencia_seleccion: IF '(' expresion ')' sentencia
  194                    | IF '(' expresion ')' sentencia ELSE sentencia
  195                    | SWITCH '(' expresion ')' sentencia

  196 sentencia_iteracion: WHILE '(' expresion ')' sentencia
  197                    | DO sentencia WHILE '(' expresion ')' ';'
  198                    | FOR '(' for_opc ';' expresion_opc ';' expresion_opc ')' sentencia

  199 for_opc: /* vacío */
  200        | expresion
  201        | declaracion

  202 sentencia_etiquetada: CASE exp_constante ':' sentencia
  203                     | DEFAULT ':' sentencia
  204                     | ID ':' sentencia

  205 sentencia_salto: CONTINUE ';'
  206                | BREAK ';'
  207                | RETURN expresion_opc ';'
  208                | GOTO ID ';'


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 8
'!' (33) 78
'%' (37) 64
'&' (38) 46 73
'(' (40) 11 66 72 81 90 140 142 143 165 167 193 194 195 196 197 198
')' (41) 12 66 72 81 90 140 142 143 165 167 193 194 195 196 197 198
'*' (42) 62 74 133 134
'+' (43) 59 75
',' (44) 21 87 98 104 106 122 148 154 158
'-' (45) 60 76
'.' (46) 82
'/' (47) 63
':' (58) 25 124 202 203 204
';' (59) 4 7 116 179 189 190 197 198 205 206 207 208
'<' (60) 51
'=' (61) 26 100 160
'>' (62) 52
'?' (63) 25
'[' (91) 13 80 141 166
']' (93) 14 80 141 166
'^' (94) 44
'{' (123) 10 102 110 155 182
'|' (124) 42
'}' (125) 9 102 110 155 182
'~' (126) 77
error (256) 6
NUM_ENTERO (258) 15
NUM_REAL (259) 16
TIPO_DATO (260) 107
ID (261) 19 82 83 111 113 139 153 154 156 161 204 208
ASIG_MULT (262) 27
ASIG_DIV (263) 28
ASIG_MOD (264) 29
ASIG_SUMA (265) 30
ASIG_RESTA (266) 31
ASIG_DESP_IZQ (267) 32
ASIG_DESP_DER (268) 33
ASIG_AND_BIN (269) 34
ASIG_XOR_BIN (270) 35
ASIG_OR_BIN (271) 36
OP_INC (272) 68 84
OP_DEC (273) 69 85
OP_IGUALDAD (274) 48
OP_DESIGUALDAD (275) 49
OP_AND (276) 40
OP_OR (277) 38
OP_MENOR_IGUAL (278) 53
OP_MAYOR_IGUAL (279) 54
OP_DESP_IZQ (280) 56
OP_DESP_DER (281) 57
OP_MIEMBRO_PUNT (282) 83
CHAR (283) 17
STRING (284) 89
SIZEOF (285) 71 72
CLASE_ALM (286) 92
CALIF_TIPO (287) 94 118 137 138
STRUCT_UNION (288) 110 111
ENUM (289) 155 156
CONTINUE (290) 205
BREAK (291) 206
IF (292) 193 194
ELSE (293) 194
SWITCH (294) 195
FOR (295) 198
DO (296) 197
WHILE (297) 196 197
CASE (298) 202
DEFAULT (299) 203
RETURN (300) 207
GOTO (301) 208


No terminales con las reglas donde aparecen

$accept (72)
    en la izquierda: 0
input (73)
    en la izquierda: 1 2, en la derecha: 0 2
line (74)
    en la izquierda: 3 4 5 6, en la derecha: 2
finDeLinea (75)
    en la izquierda: 7 8 9 10 11 12 13 14, en la derecha: 6
const (76)
    en la izquierda: 15 16 17 18, en la derecha: 88
const_enum (77)
    en la izquierda: 19, en la derecha: 18
expresion (78)
    en la izquierda: 20 21, en la derecha: 21 25 80 90 181 193 194
    195 196 197 200
exp_asignacion (79)
    en la izquierda: 22 23, en la derecha: 20 21 23 86 87 101
exp_condicional (80)
    en la izquierda: 24 25, en la derecha: 22 25 127
op_asignacion (81)
    en la izquierda: 26 27 28 29 30 31 32 33 34 35 36, en la derecha:
    23
exp_OR_log (82)
    en la izquierda: 37 38, en la derecha: 24 25 38
exp_AND_log (83)
    en la izquierda: 39 40, en la derecha: 37 38 40
exp_OR_in (84)
    en la izquierda: 41 42, en la derecha: 39 40 42
exp_OR_ex (85)
    en la izquierda: 43 44, en la derecha: 41 42 44
exp_AND (86)
    en la izquierda: 45 46, en la derecha: 43 44 46
exp_igualdad (87)
    en la izquierda: 47 48 49, en la derecha: 45 46 48 49
exp_relacional (88)
    en la izquierda: 50 51 52 53 54, en la derecha: 47 48 49 51 52
    53 54
exp_desp (89)
    en la izquierda: 55 56 57, en la derecha: 50 51 52 53 54 56 57
exp_aditiva (90)
    en la izquierda: 58 59 60, en la derecha: 55 56 57 59 60
exp_multip (91)
    en la izquierda: 61 62 63 64, en la derecha: 58 59 60 62 63 64
exp_conversion (92)
    en la izquierda: 65 66, en la derecha: 61 62 63 64 66 70
exp_unaria (93)
    en la izquierda: 67 68 69 70 71 72, en la derecha: 23 65 66 68
    69 71
op_unario (94)
    en la izquierda: 73 74 75 76 77 78, en la derecha: 70
exp_sufijo (95)
    en la izquierda: 79 80 81 82 83 84 85, en la derecha: 67 80 81
    82 83 84 85
lista_argumentos (96)
    en la izquierda: 86 87, en la derecha: 81 87
exp_primaria (97)
    en la izquierda: 88 89 90, en la derecha: 79
declaracion (98)
    en la izquierda: 91, en la derecha: 4 189 190 201
especificadores_declaracion (99)
    en la izquierda: 92 93 94, en la derecha: 91 96 149 150 178
especificadores_declaracion_opc (100)
    en la izquierda: 95 96, en la derecha: 92 93 94
lista_declaradores (101)
    en la izquierda: 97 98, en la derecha: 91 98
declarador (102)
    en la izquierda: 99 100, en la derecha: 97 98
inicializador (103)
    en la izquierda: 101 102, en la derecha: 100 105 106
coma_opc (104)
    en la izquierda: 103 104, en la derecha: 102
lista_inicializadores (105)
    en la izquierda: 105 106, en la derecha: 102 106
especificador_tipo (106)
    en la izquierda: 107 108 109, en la derecha: 93 117
especificador_struct_union (107)
    en la izquierda: 110 111, en la derecha: 108
ID_opc (108)
    en la izquierda: 112 113, en la derecha: 110 155
lista_declaradores_struct (109)
    en la izquierda: 114 115, en la derecha: 110 115
declaracion_struct (110)
    en la izquierda: 116, en la derecha: 114 115
lista_calificadores (111)
    en la izquierda: 117 118, en la derecha: 116 120 162
lista_calificadores_opc (112)
    en la izquierda: 119 120, en la derecha: 117 118
declaradores_struct (113)
    en la izquierda: 121 122, en la derecha: 116 122
decla_struct (114)
    en la izquierda: 123 124, en la derecha: 121 122
decla_opc (115)
    en la izquierda: 125 126, en la derecha: 124
exp_constante (116)
    en la izquierda: 127, en la derecha: 124 129 160 202
exp_constante_opc (117)
    en la izquierda: 128 129, en la derecha: 141 166
decla (118)
    en la izquierda: 130, en la derecha: 99 100 123 126 140 149 178
puntero_opc (119)
    en la izquierda: 131 132, en la derecha: 130 164
puntero (120)
    en la izquierda: 133 134, en la derecha: 132 134 163
lista_calificadores_tipos_opc (121)
    en la izquierda: 135 136, en la derecha: 133 134
lista_calificadores_tipos (122)
    en la izquierda: 137 138, en la derecha: 136 138
declarador_directo (123)
    en la izquierda: 139 140 141 142 143, en la derecha: 130 141 142
    143
lista_identificadores_opc (124)
    en la izquierda: 144 145, en la derecha: 143
lista_tipos_param (125)
    en la izquierda: 146, en la derecha: 171
lista_parametros (126)
    en la izquierda: 147 148, en la derecha: 146 148
declaracion_parametro (127)
    en la izquierda: 149 150, en la derecha: 147 148
declarador_abstracto_opc (128)
    en la izquierda: 151 152, en la derecha: 150 162
lista_identificadores (129)
    en la izquierda: 153 154, en la derecha: 145 154
especificador_enum (130)
    en la izquierda: 155 156, en la derecha: 109
lista_enumeradores (131)
    en la izquierda: 157 158, en la derecha: 155 158
enumerador (132)
    en la izquierda: 159 160, en la derecha: 157 158
const_de_enumeracion (133)
    en la izquierda: 161, en la derecha: 159 160
nombre_tipo (134)
    en la izquierda: 162, en la derecha: 66 72
declarador_abstracto (135)
    en la izquierda: 163 164, en la derecha: 152 165
declarador_abstracto_directo (136)
    en la izquierda: 165 166 167, en la derecha: 164 169
declarador_abstracto_directo_opc (137)
    en la izquierda: 168 169, en la derecha: 166 167
lista_tipos_param_opc (138)
    en la izquierda: 170 171, en la derecha: 142 167
sentencia (139)
    en la izquierda: 172 173 174 175 176 177 178, en la derecha: 5
    191 192 193 194 195 196 197 198 202 203 204
sentencia_exp (140)
    en la izquierda: 179, en la derecha: 172
expresion_opc (141)
    en la izquierda: 180 181, en la derecha: 179 198 207
sentencia_compuesta (142)
    en la izquierda: 182, en la derecha: 173 178
lista_compuesta (143)
    en la izquierda: 183 184, en la derecha: 182 184
lista_declaraciones_opc (144)
    en la izquierda: 185 186, en la derecha: 183 184
lista_sentencias_opc (145)
    en la izquierda: 187 188, en la derecha: 183 184
lista_declaraciones (146)
    en la izquierda: 189 190, en la derecha: 186 190
lista_sentencias (147)
    en la izquierda: 191 192, en la derecha: 188 192
sentencia_seleccion (148)
    en la izquierda: 193 194 195, en la derecha: 174
sentencia_iteracion (149)
    en la izquierda: 196 197 198, en la derecha: 175
for_opc (150)
    en la izquierda: 199 200 201, en la derecha: 198
sentencia_etiquetada (151)
    en la izquierda: 202 203 204, en la derecha: 176
sentencia_salto (152)
    en la izquierda: 205 206 207 208, en la derecha: 177


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end          desplazar e ir al estado 2
    error         desplazar e ir al estado 3
    NUM_ENTERO    desplazar e ir al estado 4
    NUM_REAL      desplazar e ir al estado 5
    TIPO_DATO     desplazar e ir al estado 6
    ID            desplazar e ir al estado 7
    OP_INC        desplazar e ir al estado 8
    OP_DEC        desplazar e ir al estado 9
    CHAR          desplazar e ir al estado 10
    STRING        desplazar e ir al estado 11
    SIZEOF        desplazar e ir al estado 12
    CLASE_ALM     desplazar e ir al estado 13
    CALIF_TIPO    desplazar e ir al estado 14
    STRUCT_UNION  desplazar e ir al estado 15
    ENUM          desplazar e ir al estado 16
    CONTINUE      desplazar e ir al estado 17
    BREAK         desplazar e ir al estado 18
    IF            desplazar e ir al estado 19
    SWITCH        desplazar e ir al estado 20
    FOR           desplazar e ir al estado 21
    DO            desplazar e ir al estado 22
    WHILE         desplazar e ir al estado 23
    CASE          desplazar e ir al estado 24
    DEFAULT       desplazar e ir al estado 25
    RETURN        desplazar e ir al estado 26
    GOTO          desplazar e ir al estado 27
    '{'           desplazar e ir al estado 28
    '('           desplazar e ir al estado 29
    '&'           desplazar e ir al estado 30
    '+'           desplazar e ir al estado 31
    '-'           desplazar e ir al estado 32
    '*'           desplazar e ir al estado 33
    '~'           desplazar e ir al estado 34
    '!'           desplazar e ir al estado 35

    $end          [reduce usando la regla 3 (line)]
    error         [reduce usando la regla 3 (line)]
    NUM_ENTERO    [reduce usando la regla 3 (line)]
    NUM_REAL      [reduce usando la regla 3 (line)]
    TIPO_DATO     [reduce usando la regla 3 (line)]
    ID            [reduce usando la regla 3 (line)]
    OP_INC        [reduce usando la regla 3 (line)]
    OP_DEC        [reduce usando la regla 3 (line)]
    CHAR          [reduce usando la regla 3 (line)]
    STRING        [reduce usando la regla 3 (line)]
    SIZEOF        [reduce usando la regla 3 (line)]
    CLASE_ALM     [reduce usando la regla 3 (line)]
    CALIF_TIPO    [reduce usando la regla 3 (line)]
    STRUCT_UNION  [reduce usando la regla 3 (line)]
    ENUM          [reduce usando la regla 3 (line)]
    CONTINUE      [reduce usando la regla 3 (line)]
    BREAK         [reduce usando la regla 3 (line)]
    IF            [reduce usando la regla 3 (line)]
    SWITCH        [reduce usando la regla 3 (line)]
    FOR           [reduce usando la regla 3 (line)]
    DO            [reduce usando la regla 3 (line)]
    WHILE         [reduce usando la regla 3 (line)]
    CASE          [reduce usando la regla 3 (line)]
    DEFAULT       [reduce usando la regla 3 (line)]
    RETURN        [reduce usando la regla 3 (line)]
    GOTO          [reduce usando la regla 3 (line)]
    ';'           reduce usando la regla 3 (line)
    ';'           [reduce usando la regla 180 (expresion_opc)]
    '{'           [reduce usando la regla 3 (line)]
    '('           [reduce usando la regla 3 (line)]
    '&'           [reduce usando la regla 3 (line)]
    '+'           [reduce usando la regla 3 (line)]
    '-'           [reduce usando la regla 3 (line)]
    '*'           [reduce usando la regla 3 (line)]
    '~'           [reduce usando la regla 3 (line)]
    '!'           [reduce usando la regla 3 (line)]

    line                         ir al estado 36
    const                        ir al estado 37
    const_enum                   ir al estado 38
    expresion                    ir al estado 39
    exp_asignacion               ir al estado 40
    exp_condicional              ir al estado 41
    exp_OR_log                   ir al estado 42
    exp_AND_log                  ir al estado 43
    exp_OR_in                    ir al estado 44
    exp_OR_ex                    ir al estado 45
    exp_AND                      ir al estado 46
    exp_igualdad                 ir al estado 47
    exp_relacional               ir al estado 48
    exp_desp                     ir al estado 49
    exp_aditiva                  ir al estado 50
    exp_multip                   ir al estado 51
    exp_conversion               ir al estado 52
    exp_unaria                   ir al estado 53
    op_unario                    ir al estado 54
    exp_sufijo                   ir al estado 55
    exp_primaria                 ir al estado 56
    declaracion                  ir al estado 57
    especificadores_declaracion  ir al estado 58
    especificador_tipo           ir al estado 59
    especificador_struct_union   ir al estado 60
    especificador_enum           ir al estado 61
    sentencia                    ir al estado 62
    sentencia_exp                ir al estado 63
    expresion_opc                ir al estado 64
    sentencia_compuesta          ir al estado 65
    sentencia_seleccion          ir al estado 66
    sentencia_iteracion          ir al estado 67
    sentencia_etiquetada         ir al estado 68
    sentencia_salto              ir al estado 69


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    6 line: error . finDeLinea

    ';'   desplazar e ir al estado 70
    '\n'  desplazar e ir al estado 71
    '}'   desplazar e ir al estado 72
    '{'   desplazar e ir al estado 73
    '('   desplazar e ir al estado 74
    ')'   desplazar e ir al estado 75
    '['   desplazar e ir al estado 76
    ']'   desplazar e ir al estado 77

    finDeLinea  ir al estado 78


estado 4

   15 const: NUM_ENTERO .

    $default  reduce usando la regla 15 (const)


estado 5

   16 const: NUM_REAL .

    $default  reduce usando la regla 16 (const)


estado 6

  107 especificador_tipo: TIPO_DATO .

    $default  reduce usando la regla 107 (especificador_tipo)


estado 7

   19 const_enum: ID .
  204 sentencia_etiquetada: ID . ':' sentencia

    ':'  desplazar e ir al estado 79

    $default  reduce usando la regla 19 (const_enum)


estado 8

   68 exp_unaria: OP_INC . exp_unaria

    NUM_ENTERO  desplazar e ir al estado 4
    NUM_REAL    desplazar e ir al estado 5
    ID          desplazar e ir al estado 80
    OP_INC      desplazar e ir al estado 8
    OP_DEC      desplazar e ir al estado 9
    CHAR        desplazar e ir al estado 10
    STRING      desplazar e ir al estado 11
    SIZEOF      desplazar e ir al estado 12
    '('         desplazar e ir al estado 81
    '&'         desplazar e ir al estado 30
    '+'         desplazar e ir al estado 31
    '-'         desplazar e ir al estado 32
    '*'         desplazar e ir al estado 33
    '~'         desplazar e ir al estado 34
    '!'         desplazar e ir al estado 35

    const         ir al estado 37
    const_enum    ir al estado 38
    exp_unaria    ir al estado 82
    op_unario     ir al estado 54
    exp_sufijo    ir al estado 55
    exp_primaria  ir al estado 56


estado 9

   69 exp_unaria: OP_DEC . exp_unaria

    NUM_ENTERO  desplazar e ir al estado 4
    NUM_REAL    desplazar e ir al estado 5
    ID          desplazar e ir al estado 80
    OP_INC      desplazar e ir al estado 8
    OP_DEC      desplazar e ir al estado 9
    CHAR        desplazar e ir al estado 10
    STRING      desplazar e ir al estado 11
    SIZEOF      desplazar e ir al estado 12
    '('         desplazar e ir al estado 81
    '&'         desplazar e ir al estado 30
    '+'         desplazar e ir al estado 31
    '-'         desplazar e ir al estado 32
    '*'         desplazar e ir al estado 33
    '~'         desplazar e ir al estado 34
    '!'         desplazar e ir al estado 35

    const         ir al estado 37
    const_enum    ir al estado 38
    exp_unaria    ir al estado 83
    op_unario     ir al estado 54
    exp_sufijo    ir al estado 55
    exp_primaria  ir al estado 56


estado 10

   17 const: CHAR .

    $default  reduce usando la regla 17 (const)


estado 11

   89 exp_primaria: STRING .

    $default  reduce usando la regla 89 (exp_primaria)


estado 12

   71 exp_unaria: SIZEOF . exp_unaria
   72           | SIZEOF . '(' nombre_tipo ')'

    NUM_ENTERO  desplazar e ir al estado 4
    NUM_REAL    desplazar e ir al estado 5
    ID          desplazar e ir al estado 80
    OP_INC      desplazar e ir al estado 8
    OP_DEC      desplazar e ir al estado 9
    CHAR        desplazar e ir al estado 10
    STRING      desplazar e ir al estado 11
    SIZEOF      desplazar e ir al estado 12
    '('         desplazar e ir al estado 84
    '&'         desplazar e ir al estado 30
    '+'         desplazar e ir al estado 31
    '-'         desplazar e ir al estado 32
    '*'         desplazar e ir al estado 33
    '~'         desplazar e ir al estado 34
    '!'         desplazar e ir al estado 35

    const         ir al estado 37
    const_enum    ir al estado 38
    exp_unaria    ir al estado 85
    op_unario     ir al estado 54
    exp_sufijo    ir al estado 55
    exp_primaria  ir al estado 56


estado 13

   92 especificadores_declaracion: CLASE_ALM . especificadores_declaracion_opc

    TIPO_DATO     desplazar e ir al estado 6
    CLASE_ALM     desplazar e ir al estado 13
    CALIF_TIPO    desplazar e ir al estado 14
    STRUCT_UNION  desplazar e ir al estado 15
    ENUM          desplazar e ir al estado 16

    $default  reduce usando la regla 95 (especificadores_declaracion_opc)

    especificadores_declaracion      ir al estado 86
    especificadores_declaracion_opc  ir al estado 87
    especificador_tipo               ir al estado 59
    especificador_struct_union       ir al estado 60
    especificador_enum               ir al estado 61


estado 14

   94 especificadores_declaracion: CALIF_TIPO . especificadores_declaracion_opc

    TIPO_DATO     desplazar e ir al estado 6
    CLASE_ALM     desplazar e ir al estado 13
    CALIF_TIPO    desplazar e ir al estado 14
    STRUCT_UNION  desplazar e ir al estado 15
    ENUM          desplazar e ir al estado 16

    $default  reduce usando la regla 95 (especificadores_declaracion_opc)

    especificadores_declaracion      ir al estado 86
    especificadores_declaracion_opc  ir al estado 88
    especificador_tipo               ir al estado 59
    especificador_struct_union       ir al estado 60
    especificador_enum               ir al estado 61


estado 15

  110 especificador_struct_union: STRUCT_UNION . ID_opc '{' lista_declaradores_struct '}'
  111                           | STRUCT_UNION . ID

    ID  desplazar e ir al estado 89

    $default  reduce usando la regla 112 (ID_opc)

    ID_opc  ir al estado 90


estado 16

  155 especificador_enum: ENUM . ID_opc '{' lista_enumeradores '}'
  156                   | ENUM . ID

    ID  desplazar e ir al estado 91

    $default  reduce usando la regla 112 (ID_opc)

    ID_opc  ir al estado 92


estado 17

  205 sentencia_salto: CONTINUE . ';'

    ';'  desplazar e ir al estado 93


estado 18

  206 sentencia_salto: BREAK . ';'

    ';'  desplazar e ir al estado 94


estado 19

  193 sentencia_seleccion: IF . '(' expresion ')' sentencia
  194                    | IF . '(' expresion ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 95


estado 20

  195 sentencia_seleccion: SWITCH . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 96


estado 21

  198 sentencia_iteracion: FOR . '(' for_opc ';' expresion_opc ';' expresion_opc ')' sentencia

    '('  desplazar e ir al estado 97


estado 22

  197 sentencia_iteracion: DO . sentencia WHILE '(' expresion ')' ';'

    NUM_ENTERO    desplazar e ir al estado 4
    NUM_REAL      desplazar e ir al estado 5
    TIPO_DATO     desplazar e ir al estado 6
    ID            desplazar e ir al estado 7
    OP_INC        desplazar e ir al estado 8
    OP_DEC        desplazar e ir al estado 9
    CHAR          desplazar e ir al estado 10
    STRING        desplazar e ir al estado 11
    SIZEOF        desplazar e ir al estado 12
    CLASE_ALM     desplazar e ir al estado 13
    CALIF_TIPO    desplazar e ir al estado 14
    STRUCT_UNION  desplazar e ir al estado 15
    ENUM          desplazar e ir al estado 16
    CONTINUE      desplazar e ir al estado 17
    BREAK         desplazar e ir al estado 18
    IF            desplazar e ir al estado 19
    SWITCH        desplazar e ir al estado 20
    FOR           desplazar e ir al estado 21
    DO            desplazar e ir al estado 22
    WHILE         desplazar e ir al estado 23
    CASE          desplazar e ir al estado 24
    DEFAULT       desplazar e ir al estado 25
    RETURN        desplazar e ir al estado 26
    GOTO          desplazar e ir al estado 27
    '{'           desplazar e ir al estado 28
    '('           desplazar e ir al estado 29
    '&'           desplazar e ir al estado 30
    '+'           desplazar e ir al estado 31
    '-'           desplazar e ir al estado 32
    '*'           desplazar e ir al estado 33
    '~'           desplazar e ir al estado 34
    '!'           desplazar e ir al estado 35

    $default  reduce usando la regla 180 (expresion_opc)

    const                        ir al estado 37
    const_enum                   ir al estado 38
    expresion                    ir al estado 39
    exp_asignacion               ir al estado 40
    exp_condicional              ir al estado 41
    exp_OR_log                   ir al estado 42
    exp_AND_log                  ir al estado 43
    exp_OR_in                    ir al estado 44
    exp_OR_ex                    ir al estado 45
    exp_AND                      ir al estado 46
    exp_igualdad                 ir al estado 47
    exp_relacional               ir al estado 48
    exp_desp                     ir al estado 49
    exp_aditiva                  ir al estado 50
    exp_multip                   ir al estado 51
    exp_conversion               ir al estado 52
    exp_unaria                   ir al estado 53
    op_unario                    ir al estado 54
    exp_sufijo                   ir al estado 55
    exp_primaria                 ir al estado 56
    especificadores_declaracion  ir al estado 98
    especificador_tipo           ir al estado 59
    especificador_struct_union   ir al estado 60
    especificador_enum           ir al estado 61
    sentencia                    ir al estado 99
    sentencia_exp                ir al estado 63
    expresion_opc                ir al estado 64
    sentencia_compuesta          ir al estado 65
    sentencia_seleccion          ir al estado 66
    sentencia_iteracion          ir al estado 67
    sentencia_etiquetada         ir al estado 68
    sentencia_salto              ir al estado 69


estado 23

  196 sentencia_iteracion: WHILE . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 100


estado 24

  202 sentencia_etiquetada: CASE . exp_constante ':' sentencia
